--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,86 @@
 /* BASIC STYLES HERE */
+body {
+    background-color: #22223B;
+    user-select: none;
+    overflow-y: hidden !important;
+}
+
+.circle {
+    width: 50px;
+    height: 50px;
+    border: 2px solid white;
+    border-radius: 50%;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #36364C;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 20px;
+    z-index: 999;
+}
+
+.closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+  
+  .closeJot {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    margin-left: 50px;
+    font-size: 50px;
+    cursor: pointer;
+  }
+  
+  .closebtn:hover {
+    color: red !important;
+  }
+  
+  .closeJot:hover {
+    color: red !important;
+  }
+
+.sidenav form input:nth-child(1) {
+    background-color: #36364C;
+    border: none;
+    border-bottom: 1px solid white;
+}
+
+
+input[type="color"] {
+    appearance: none;
+    border-style: none;
+}
+
+.jot-card {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    background-color: #36364C;
+    width: 80%;
+    height: 600px;
+    border: 2px solid white;
+}
+
+textarea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    outline: none;
+    overflow: auto;
+    padding: 20px;
+}
